--- a/composer.json
+++ b/composer.json
@@ -6,8 +6,15 @@
     "license": "MIT",
     "require": {
         "php": "^8.2",
+        "andreiio/blade-remix-icon": "^3.2",
+        "blade-ui-kit/blade-icons": "^1.6",
+        "codeat3/blade-emblemicons": "^1.4",
+        "codeat3/blade-fontisto-icons": "^1.4",
+        "davidhsianturi/blade-bootstrap-icons": "^1.5",
         "laravel/framework": "^11.0",
-        "laravel/tinker": "^2.9"
+        "laravel/tinker": "^2.9",
+        "mallardduck/blade-boxicons": "^2.4",
+        "ryangjchandler/blade-tabler-icons": "^2.3"
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.13",
