--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "devDependencies": {
         "autoprefixer": "^10.4.19",
         "axios": "^1.6.4",
+        "glob": "^10.4.1",
         "laravel-vite-plugin": "^1.0",
         "postcss": "^8.4.38",
         "prettier": "^3.2.5",
@@ -15,7 +16,5 @@
         "sass": "^1.72.0",
         "tailwindcss": "^3.4.3",
         "vite": "^5.0"
-    },
-    "dependencies": {
     }
 }
