--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
         "axios": "^1.6.4",
         "glob": "^10.4.1",
         "laravel-vite-plugin": "^1.0",
+        "moment": "^2.30.1",
         "postcss": "^8.4.38",
         "prettier": "^3.2.5",
         "prettier-plugin-tailwindcss": "^0.5.14",
