--- a/.env.example
+++ b/.env.example
@@ -5,6 +5,9 @@ APP_DEBUG=true
 APP_TIMEZONE=UTC
 APP_URL=http://masi_mras.test
 
+MAXIM_EXCEL_HOST=127.0.0.1
+MAXIM_EXCEL_PORT=5002
+
 APP_LOCALE=en
 APP_FALLBACK_LOCALE=en
 APP_FAKER_LOCALE=en_US
