--- a/.env.example
+++ b/.env.example
@@ -5,8 +5,10 @@ APP_DEBUG=true
 APP_TIMEZONE=UTC
 APP_URL=http://masi_mras.test
 
-MAXIM_EXCEL_HOST=127.0.0.1
+MAXIM_MAIL_PORT=5001
 MAXIM_EXCEL_PORT=5002
+MAXIM_LOGGER_PORT=5003
+MAXIM_DISCORD_PORT=5004
 
 APP_LOCALE=en
 APP_FALLBACK_LOCALE=en
