--- a/.env.example
+++ b/.env.example
@@ -5,12 +5,12 @@ APP_DEBUG=true
 APP_TIMEZONE=UTC
 APP_URL=
 
-DB_CONNECTION=sqlite
-# DB_HOST=127.0.0.1
-# DB_PORT=3306
-# DB_DATABASE=laravel
-# DB_USERNAME=root
-# DB_PASSWORD=
+DB_CONNECTION=mysql
+DB_HOST=127.0.0.1
+DB_PORT=3306
+DB_DATABASE=laravel
+DB_USERNAME=laravel-user
+DB_PASSWORD=laravel-password
 
 MAXIM_EXCEL_PORT=5002
 MAXIM_LOGGER_PORT=5003
