--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -51,5 +51,15 @@ services:
     ports:
       - "8888:80"
 
+  # Email
+  email:
+    image: shoxcie/email:latest
+    environment:
+      - PORT=5001
+    depends_on:
+      - app
+    ports:
+      - "5001:5001"
+
 volumes:
   dbdata:
